; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr__libkernel_init.c___libkernel_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr__libkernel_init.c___libkernel_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.ProgramVars = type { i32 }

@_libkernel_functions = common dso_local global %struct.TYPE_4__* null, align 8
@_dlsym = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__libkernel_init(%struct.TYPE_4__* %0, i8** %1, i8** %2, %struct.ProgramVars* %3) #0 {
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca %struct.ProgramVars*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8** %2, i8*** %7, align 8
  store %struct.ProgramVars* %3, %struct.ProgramVars** %8, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** @_libkernel_functions, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* @_dlsym, align 8
  br label %18

18:                                               ; preds = %14, %4
  %19 = call i32 (...) @mach_init()
  ret void
}

declare dso_local i32 @mach_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
